--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "datocms-client": "^3.4.11",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
